<resources>
    <string name="app_name">InventoryApp</string>
    <string name="activity_details">Item details</string>
    <string name="activity_add">Add new item</string>

    <string name="action_settings">Settings</string>

    <string name="item_name">Item name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>

    <string name="no_item_in_the_database">No item in the database.</string>

    <string name="delete_confirm_title">Do you really want to delete this item?</string>
    <string name="delete_confirm_text">You can\'t restore deleted data.</string>
    <string name="delete_went_wrong">Something went wrong with delete.</string>
    <string name="delete_successful">Deleted successfully.</string>
    <string name="delete_neg_button">No, I keep it</string>
    <string name="delete_pos_button">Yes, I want to delete</string>

    <string name="dummy_email">supplier@company.com</string>
    <string name="ordering_email_subject">We ran out of</string>

    <string name="btn_label_delete">DELETE</string>
    <string name="btn_label_order">ORDER</string>
    <string name="btn_label_save">SAVE</string>
    <string name="select_image">Select image</string>
    <string name="item_saved">Item saved.</string>
    <string name="exception_unknown_uri">Unknown URI, cannot resolve.</string>
    <string name="intent_title">Send Email</string>
    <string name="price_placeholder">€ %1$s</string>
</resources>
