<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="hu.borde.inventoryapp.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_data_height"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_left">

        <TextView
            android:id="@+id/name_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/detail_label"
            android:text="@string/item_name" />

        <TextView
            android:id="@+id/name_field"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            style="@style/detail_data"
            tools:text="Example product"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_data_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/quant_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/detail_label"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/detail_data_height"
            android:layout_weight="2">

            <Button
                android:id="@+id/decrement_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="-"/>


            <TextView
                android:id="@+id/quant_field"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/detail_data"
                android:textAlignment="center"
                tools:text="1"/>

            <Button
                android:id="@+id/increment_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="+"/>

        </LinearLayout>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_data_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/price_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/detail_label"
            android:text="@string/price" />

        <TextView
            android:id="@+id/price_field"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            style="@style/detail_data"
            tools:text="€ 1"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="@dimen/detail_image_size"
            android:visibility="visible"
            android:layout_height="@dimen/detail_image_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_data_height"
        android:gravity="center">

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btn_label_delete"/>

        <Button
            android:id="@+id/order_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btn_label_order"/>

    </LinearLayout>

</LinearLayout>
